--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -19,11 +19,11 @@ jobs:
 
     - name: Make changes
       run: |
-        echo "$(date): Some new content" >> path/to/your/file.txt
+        echo "$(date): Some new content" >> commit-log.txt
 
     - name: Commit changes
       run: |
-        git add path/to/your/file.txt
+        git add commit_log.txt
         git commit -m "Auto commit at $(date)"
         git push
 
