--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -32,9 +32,17 @@ jobs:
           git commit -m "Auto commit at $(date)"
           git push
 
-      - name: Log commit message
+      - name: Create or update commit_log.txt
         run: |
-          echo "$(date): Auto commit executed" >> commit_log.txt
+          if [ ! -f commit_log.txt ]; then
+            echo "Creating commit_log.txt"
+            echo "$(date): Auto commit executed" > commit_log.txt
+          else
+            echo "$(date): Auto commit executed" >> commit_log.txt
+          fi
+
+      - name: Push log file
+        run: |
           git add commit_log.txt
           git commit -m "Update commit log at $(date)"
           git push
